--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <button class="mute-button right-mute" id="rightMuteButton">
             <img class="mute-icon" src="icons/volume-white.png" alt="Mute">
         </button>
+        <div class="disclaimer">
+            <p>Note: Helbreath Olympia regeneration ticks are not perfectly synchronized with client-side timers. The timers may periodically drift out of sync but will naturally realign with server regeneration over time. <a href="#" id="resetTimer">Click here to reset the timers</a></p>
+        </div>
         <div class="start-overlay" id="startOverlay">
             <button class="start-button" id="startButton">START</button>
         </div>
